# OpenCvPlateSvmTrain

./: CMakeLists.txt
OpenCvSvmTrain/: CMakeLists.txt  OpenCvSvmTrain.cpp  OpenCvSvmTrain.h  utils.cpp  utils.h
